Fix broken links

--- a/include-modules.ini
+++ b/include-modules.ini
@@ -1,1 +1,24 @@
-../.config/polybar/include-modules.ini
+include-file = $HOME/.config/polybar/modules/memory.ini
+include-file = $HOME/.config/polybar/modules/spotify-controls.ini
+include-file = $HOME/.config/polybar/modules/openweathermap-fullfeatured.ini
+include-file = $HOME/.config/polybar/modules/color-picker.ini
+include-file = $HOME/.config/polybar/modules/bluetooth.ini
+include-file = $HOME/.config/polybar/modules/battery.ini
+include-file = $HOME/.config/polybar/modules/package-updates-trigger.ini
+include-file = $HOME/.config/polybar/modules/package-updates.ini
+include-file = $HOME/.config/polybar/modules/spotify-bar.ini
+include-file = $HOME/.config/polybar/modules/cpu.ini
+include-file = $HOME/.config/polybar/modules/spotify.ini
+include-file = $HOME/.config/polybar/modules/vscode.ini
+include-file = $HOME/.config/polybar/modules/settings.ini
+include-file = $HOME/.config/polybar/modules/dolphin.ini
+include-file = $HOME/.config/polybar/modules/flameshot.ini
+include-file = $HOME/.config/polybar/modules/menu.ini
+include-file = $HOME/.config/polybar/modules/pulseaudio.ini
+include-file = $HOME/.config/polybar/modules/workspaces.ini
+include-file = $HOME/.config/polybar/modules/network.ini
+include-file = $HOME/.config/polybar/modules/reddit.ini
+include-file = $HOME/.config/polybar/modules/github.ini
+include-file = $HOME/.config/polybar/modules/volume.ini
+include-file = $HOME/.config/polybar/modules/date.ini
+include-file = $HOME/.config/polybar/modules/powermenu.ini
