--- a/modules/color-picker.ini
+++ b/modules/color-picker.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/color-picker.ini
+[module/color-picker]
+type = custom/text
+content =  
+content-padding = 2
+content-foreground = #C1BF10
+click-left = kcolorchooser 
