--- a/modules/date.ini
+++ b/modules/date.ini
@@ -1,1 +1,10 @@
-../../.config/polybar/modules/date.ini
+[module/date]
+type = internal/date
+interval = 30
+label =  %time%
+label-padding = 5
+label-background = ${color.shade3}
+#label-foreground = #F65522 
+label-foreground = #EBAB74 
+time =  %m-%d-%Y
+time-alt =  %I:%M %p
