--- a/modules/dolphin.ini
+++ b/modules/dolphin.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/dolphin.ini
+[module/dolphin]
+type = custom/text
+content =  
+content-padding = 2
+content-foreground = #3BB6F3
+click-left = dolphin
