--- a/modules/flameshot.ini
+++ b/modules/flameshot.ini
@@ -1,1 +1,7 @@
-../../.config/polybar/modules/flameshot.ini
+[module/flameshot]
+type = custom/text
+content = 
+content-padding = 2
+content-foreground = #FC8032
+click-left = flameshot gui
+click-right = flameshot config
