--- a/modules/github.ini
+++ b/modules/github.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/github.ini
+[module/github]
+type = custom/text
+content = 
+content-padding = 2
+content-foreground = ${color.black}
+click-left = xdg-open https://www.github.com/ksyasuda &
