--- a/modules/menu.ini
+++ b/modules/menu.ini
@@ -1,1 +1,11 @@
-../../.config/polybar/modules/menu.ini
+[module/menu]
+type = custom/text
+#content = 
+content = 
+;alt icons = 
+content-padding = 2
+content-background = ${color.shade1}
+content-foreground = #2878af 
+click-middle = ~/.config/polybar/scripts/menu
+click-left = ~/.config/polybar/scripts/menu_full
+click-right = ~/.config/polybar/scripts/color-switch.sh
