--- a/modules/package-updates.ini
+++ b/modules/package-updates.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/package-updates.ini
+[module/package-updates]
+type = custom/ipc
+hook-0 = ~/.config/polybar/package-updates
+format-foreground = #55aebb
+format-padding = 1
+interval = 500
