--- a/modules/powermenu.ini
+++ b/modules/powermenu.ini
@@ -1,1 +1,8 @@
-../../.config/polybar/modules/powermenu.ini
+[module/powermenu]
+type = custom/text
+content = 
+content-padding = 4
+content-background = ${color.shade1}
+content-foreground = #D85458 
+click-left = ~/.config/polybar/scripts/sysmenu
+click-right = ~/.config/polybar/scripts/sysmenu
