--- a/modules/reddit.ini
+++ b/modules/reddit.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/reddit.ini
+[module/reddit]
+type = custom/text
+content = 
+content-padding = 2
+content-foreground = ${color.deep-orange}
+click-left = xdg-open https://www.reddit.com &
