--- a/modules/spotify.ini
+++ b/modules/spotify.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/spotify.ini
+[module/spotify]
+type = custom/text
+content = 
+content-padding = 2
+content-foreground = #28c15b
+click-left = spotify
