--- a/modules/vscode.ini
+++ b/modules/vscode.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/vscode.ini
+[module/vscode]
+type = custom/text
+content = ﬏
+content-padding = 2
+content-foreground = #3FA5E9
+click-left = code
