--- a/modules/battery.ini
+++ b/modules/battery.ini
@@ -1,1 +1,49 @@
-../../.config/polybar/modules/battery.ini
+[module/battery]
+type = internal/battery
+full-at = 99
+time-format = %H:%M
+battery = BAT0
+adapter = AC0
+format-charging = <animation-charging> <label-charging>
+format-charging-foreground = #99B679
+format-charging-padding = 2 
+label-charging = %{F#99B679}%percentage%%%{F-}
+label-charging-foreground =  #99B679
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-foreground = #F9825A 
+format-discharging-padding = 2 
+label-discharging =%{F#F9825A}%percentage%%%{F-}
+format-full = <label-full>
+format-full-foreground = #99B679
+
+format-full-prefix = ""
+format-full-prefix-foreground = #99B679 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 = 
+ramp-capacity-9 = 
+
+ramp-capacity-0-foreground = ${color.red}
+ramp-capacity-1-foreground = ${color.red}
+ramp-capacity-2-foreground = ${color.yellow}
+ramp-capacity-3-foreground = ${color.yellow}
+ramp-capacity-4-foreground = ${color.yellow}
+#ramp-capacity-foreground   = ${color.fg}
+ramp-capacity-foreground   = #99B679 
+bar-capacity-width = 2
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-6 = 
+
+animation-charging-framerate = 750
