--- a/modules/bluetooth.ini
+++ b/modules/bluetooth.ini
@@ -1,1 +1,8 @@
-../../.config/polybar/modules/bluetooth.ini
+[module/system-bluetooth-bluetoothctl]
+type = custom/script
+exec = ~/.config/polybar/scripts/system-bluetooth-bluetoothctl.sh
+tail = true
+click-left = ~/.config/polybar/scripts/system-bluetooth-bluetoothctl.sh --toggle &
+click-right = blueman-manager
+label-foreground = #fc855a
+label-padding = 1
