--- a/modules/cpu.ini
+++ b/modules/cpu.ini
@@ -1,1 +1,19 @@
-../../.config/polybar/modules/cpu.ini
+[module/cpu]
+type = internal/cpu
+interval = 0.5
+format = <label> <ramp-coreload>
+format-padding = 0.5
+format-width = 20
+label = CPU %percentage:2%%
+label-foreground = #fc855a 
+ramp-coreload-spacing = 0.8
+ramp-coreload-0 = ▁
+ramp-coreload-1 = ▂
+ramp-coreload-2 = ▃
+ramp-coreload-3 = ▄
+ramp-coreload-4 = ▅
+ramp-coreload-5 = ▆
+ramp-coreload-6 = ▇
+ramp-coreload-7 = █
+ramp-coreload-foreground = #fc855a
+ramp-coreload-padding = 0.8
