--- a/modules/network.ini
+++ b/modules/network.ini
@@ -1,1 +1,42 @@
-../../.config/polybar/modules/network.ini
+[module/network]
+type = internal/network
+interface = wlp1s0
+interval = 3.0
+udspeed-minwidth = 4
+accumulate-stats = true
+#format-connected = <ramp-signal><label-connected>
+format-connected = <label-connected><ramp-signal>
+format-disconnected = <label-disconnected>
+#format-packetloss = <animation-packetloss> <label-connected>
+label-connected = %downspeed%
+#label-connected = Wi-Fi: 
+#label-connected =%downspeed:9%
+label-disconnected = 睊not connected
+#label-disconnected-foreground = #66ffffff
+label-connected-padding = 1
+label-connected-foreground = #A8D385
+label-disconnected-foreground = #F85522
+label-disconnected-padding = 1
+
+; Only applies if <ramp-signal> is used
+ramp-signal-0 = 😱
+ramp-signal-1 = 😠
+ramp-signal-2 = 😒
+ramp-signal-3 = 😊
+ramp-signal-4 = 😃
+ramp-signal-5 = 😈
+
+ramp-signal-5-foreground = #A8D385
+ramp-signal-4-foreground = #A8D385
+ramp-signal-3-foreground = #E1D20D
+ramp-signal-2-foreground = #E1D20D
+ramp-signal-1-foreground = #F85522
+ramp-signal-0-foreground = #F85522
+; Only applies if <animation-packetloss> is used
+#animation-packetloss-0 = ⚠
+#animation-packetloss-0-foreground = #ffa64c
+#animation-packetloss-1 = 📶
+#animation-packetloss-1-foreground = #000000
+#; Framerate in milliseconds
+#animation-packetloss-framerate = 500
+click-left = kcmshell5
