--- a/modules/openweathermap-fullfeatured.ini
+++ b/modules/openweathermap-fullfeatured.ini
@@ -1,1 +1,9 @@
-../../.config/polybar/modules/openweathermap-fullfeatured.ini
+[module/openweathermap-fullfeatured]
+type = custom/script
+exec = ~/.config/polybar/scripts/openweathermap-fullfeatured.sh
+interval = 600
+label-font = 3
+label-background = ${color.shade2}
+label-foreground = #EBAB74 
+label-padding = 2
+label-offset-y = 3
