--- a/modules/package-updates-trigger.ini
+++ b/modules/package-updates-trigger.ini
@@ -1,1 +1,4 @@
-../../.config/polybar/modules/package-updates-trigger.ini
+[module/package-updates-trigger]
+type = custom/script
+exec = polybar-msg hook package-updates 1 &>/dev/null
+interval = 600
