--- a/modules/pulseaudio.ini
+++ b/modules/pulseaudio.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/pulseaudio.ini
+[module/pulseaudio]
+type = custom/text
+content = 
+content-padding = 2
+content-foreground = #8d8d1d 
+click-left = pavucontrol
