--- a/modules/settings.ini
+++ b/modules/settings.ini
@@ -1,1 +1,6 @@
-../../.config/polybar/modules/settings.ini
+[module/settings]
+type = custom/text
+content = 
+content-padding = 2
+content-foreground = ${color.black}
+click-left = systemsettings5
