--- a/modules/spotify-bar.ini
+++ b/modules/spotify-bar.ini
@@ -1,1 +1,10 @@
-../../.config/polybar/modules/spotify-bar.ini
+[module/spotify-bar]
+type = custom/script
+interval = 1
+format = <label>
+#exec = python /home/sudacode/.config/polybar/spotify_status.py -f '{artist}: {song}'
+exec = python /home/sudacode/.config/polybar/spotify_status.py -t 20 -p ',' -f '{play_pause} {song}'
+format-underline = #1db954
+format-foreground = #55AEBB
+format-padding = 2
+click-left = playerctl play-pause spotify
