--- a/modules/volume.ini
+++ b/modules/volume.ini
@@ -1,1 +1,22 @@
-../../.config/polybar/modules/volume.ini
+[module/volume]
+type = internal/pulseaudio
+# use default sink
+#sink = alsa_output.pci-0000_00_1f.3.analog-stereo
+use-ui-max = true
+interval = 5
+click-right = pavucontrol &
+format-volume = <ramp-volume> <label-volume>
+format-volume-padding = 1
+format-volume-foreground = #55AEBB 
+label-volume = %percentage%%
+label-muted = "婢"
+label-muted-padding = 1
+label-muted-foreground = #F85522 
+
+ramp-volume-0 = 奄
+ramp-volume-1 = 奄
+ramp-volume-2 = 奔
+ramp-volume-3 = 奔
+ramp-volume-4 = 墳
+ramp-volume-5 = 墳
+ramp-volume-6 = 墳
