--- a/modules/workspaces.ini
+++ b/modules/workspaces.ini
@@ -1,1 +1,32 @@
-../../.config/polybar/modules/workspaces.ini
+[module/workspaces]
+type = internal/xworkspaces
+pin-workspaces = false
+enable-click = true
+enable-scroll = true
+format-padding = 2
+
+icon-default = 
+
+format = <label-state>
+format-background = ${color.shade2}
+#label-active = 
+#label-occupied = 
+#label-urgent = 
+#label-empty = 
+label-active = %name%
+label-occupied = %name%
+label-urgent = %name%
+label-empty = %name%
+
+label-empty-padding = 1
+label-active-padding = 1
+#label-active-underline = #1db954
+label-active-underline = #99b679
+label-urgent-padding = 1
+label-occupied-padding = 1
+
+label-empty-foreground = ${color.fg}
+label-active-foreground = #99b679 
+label-urgent-foreground = ${color.curgent}
+# label-occupied-foreground = ${color.coccupied}
+label-occupied-foreground = #56a7b5 
