--- a/configs/config.ini
+++ b/configs/config.ini
@@ -101,10 +101,11 @@ scroll-down = i3wm-wsprev
 ;== Module Location ========================================================
 
 # modules-left = menu workspaces google github reddit facebook youtube
-modules-left = menu workspaces dolphin github vscode flameshot color-picker
+# modules-left = menu workspaces dolphin github vscode flameshot color-picker
+modules-left = menu workspaces dolphin flameshot color-picker
 modules-center = spotify-prev spotify-bar spotify-next memory cpu package-updates-trigger package-updates
 #modules-right = network system-bluetooth-bluetoothctl volume battery date powermenu
-modules-right = network system-bluetooth-bluetoothctl volume battery openweathermap-fullfeatured powermenu
+modules-right = network system-bluetooth-bluetoothctl volume battery openweathermap-fullfeatured date powermenu
  
 ;== Modules ========================================================
 
