--- a/modules/cpu.ini
+++ b/modules/cpu.ini
@@ -2,6 +2,7 @@
 type = internal/cpu
 interval = 0.5
 format = <label> <ramp-coreload>
+# format = <label>
 format-padding = 0.5
 format-width = 20
 label = CPU %percentage:2%%
