--- a/modules/date.ini
+++ b/modules/date.ini
@@ -1,10 +1,11 @@
 [module/date]
 type = internal/date
-interval = 30
+interval = 1
 label =  %time%
-label-padding = 5
+label-padding = 2
 label-background = ${color.shade3}
 #label-foreground = #F65522 
-label-foreground = #EBAB74 
-time =  %m-%d-%Y
-time-alt =  %I:%M %p
+label-foreground = #56a7b5 
+# time =  %r
+time =  %l:%M:%S %p
+time-alt =  %h-%d-%Y
