--- a/modules/openweathermap-fullfeatured.ini
+++ b/modules/openweathermap-fullfeatured.ini
@@ -1,9 +1,10 @@
 [module/openweathermap-fullfeatured]
 type = custom/script
-exec = ~/.config/polybar/scripts/openweathermap-fullfeatured.sh
+exec = ~/i3/scripts/openweathermap-fullfeatured.sh
+click-left = exec weather
 interval = 600
 label-font = 3
 label-background = ${color.shade2}
-label-foreground = #EBAB74 
+label-foreground = #fc855a 
 label-padding = 2
 label-offset-y = 3
