--- a/modules/spotify-bar.ini
+++ b/modules/spotify-bar.ini
@@ -2,9 +2,8 @@
 type = custom/script
 interval = 1
 format = <label>
-#exec = python /home/sudacode/.config/polybar/spotify_status.py -f '{artist}: {song}'
-exec = python /home/sudacode/.config/polybar/spotify_status.py -t 20 -p ',' -f '{play_pause} {song}'
+exec = python /home/sudacode/.config/polybar/spotify_status.py -t 35 -p ',' --playpause-font=0 -f '{play_pause}  {artist}: {song}'
 format-underline = #1db954
 format-foreground = #55AEBB
-format-padding = 2
+format-padding = 1
 click-left = playerctl play-pause spotify
