Update openweathermap module

--- a/include-modules.ini
+++ b/include-modules.ini
@@ -1,5 +1,6 @@
 include-file = $HOME/.config/polybar/modules/memory.ini
 include-file = $HOME/.config/polybar/modules/spotify-controls.ini
+include-file = $HOME/.config/polybar/modules/spotify-scroll.ini
 include-file = $HOME/.config/polybar/modules/openweathermap-fullfeatured.ini
 include-file = $HOME/.config/polybar/modules/color-picker.ini
 include-file = $HOME/.config/polybar/modules/bluetooth.ini
