Add new rofi theme and change openweathermap to use correct font

--- a/include-modules.ini
+++ b/include-modules.ini
@@ -1,25 +1,23 @@
-include-file = $HOME/.config/polybar/modules/memory.ini
-include-file = $HOME/.config/polybar/modules/spotify-controls.ini
-include-file = $HOME/.config/polybar/modules/spotify-scroll.ini
-include-file = $HOME/.config/polybar/modules/openweathermap-fullfeatured.ini
-include-file = $HOME/.config/polybar/modules/color-picker.ini
-include-file = $HOME/.config/polybar/modules/bluetooth.ini
-include-file = $HOME/.config/polybar/modules/battery.ini
-include-file = $HOME/.config/polybar/modules/package-updates-trigger.ini
-include-file = $HOME/.config/polybar/modules/package-updates.ini
-include-file = $HOME/.config/polybar/modules/spotify-bar.ini
-include-file = $HOME/.config/polybar/modules/cpu.ini
-include-file = $HOME/.config/polybar/modules/spotify.ini
-include-file = $HOME/.config/polybar/modules/vscode.ini
-include-file = $HOME/.config/polybar/modules/settings.ini
-include-file = $HOME/.config/polybar/modules/dolphin.ini
-include-file = $HOME/.config/polybar/modules/flameshot.ini
-include-file = $HOME/.config/polybar/modules/menu.ini
-include-file = $HOME/.config/polybar/modules/pulseaudio.ini
-include-file = $HOME/.config/polybar/modules/workspaces.ini
-include-file = $HOME/.config/polybar/modules/network.ini
-include-file = $HOME/.config/polybar/modules/reddit.ini
-include-file = $HOME/.config/polybar/modules/github.ini
-include-file = $HOME/.config/polybar/modules/volume.ini
-include-file = $HOME/.config/polybar/modules/date.ini
-include-file = $HOME/.config/polybar/modules/powermenu.ini
+include-file = $HOME/i3/modules/memory.ini
+include-file = $HOME/i3/modules/openweathermap-fullfeatured.ini
+include-file = $HOME/i3/modules/color-picker.ini
+include-file = $HOME/i3/modules/bluetooth.ini
+include-file = $HOME/i3/modules/battery.ini
+include-file = $HOME/i3/modules/package-updates-trigger.ini
+include-file = $HOME/i3/modules/package-updates.ini
+include-file = $HOME/i3/modules/spotify-bar.ini
+include-file = $HOME/i3/modules/spotify-controls.ini
+include-file = $HOME/i3/modules/cpu.ini
+include-file = $HOME/i3/modules/vscode.ini
+include-file = $HOME/i3/modules/settings.ini
+include-file = $HOME/i3/modules/dolphin.ini
+include-file = $HOME/i3/modules/flameshot.ini
+include-file = $HOME/i3/modules/menu.ini
+include-file = $HOME/i3/modules/pulseaudio.ini
+include-file = $HOME/i3/modules/workspaces.ini
+include-file = $HOME/i3/modules/network.ini
+include-file = $HOME/i3/modules/reddit.ini
+include-file = $HOME/i3/modules/github.ini
+include-file = $HOME/i3/modules/volume.ini
+include-file = $HOME/i3/modules/date.ini
+include-file = $HOME/i3/modules/powermenu.ini
