--- a/modules/date.ini
+++ b/modules/date.ini
@@ -1,11 +1,12 @@
 [module/date]
 type = internal/date
-interval = 1
+interval = 5
 label =  %time%
 label-padding = 2
-label-background = ${color.shade3}
+label-background = ${color.shade2}
 #label-foreground = #F65522 
 label-foreground = #56a7b5 
 # time =  %r
-time =  %l:%M:%S %p
+# time =  %l:%M:%S %p
+time =  %l:%M %p
 time-alt =  %h-%d-%Y
