--- a/modules/openweathermap-fullfeatured.ini
+++ b/modules/openweathermap-fullfeatured.ini
@@ -4,7 +4,7 @@ exec = ~/i3/scripts/openweathermap-fullfeatured.sh
 click-left = exec weather
 interval = 600
 label-font = 3
-label-background = ${color.shade2}
+label-background = #282c34 
 label-foreground = #fc855a 
 label-padding = 2
 label-offset-y = 3
