--- a/configs/config.ini
+++ b/configs/config.ini
@@ -72,16 +72,18 @@ black = #000000
 [bar/main]
 width = 100%
 height = 32
-offset-x = 2%
-offset-y = 2%
+offset-x = 2.5%
+# offset-y = 2%
 bottom = false
 fixed-center = false
 line-size = 2
-radius = 12
+radius = 15
 
 #background = ${color.bg}
 background = #282c34
 foreground = ${color.fg}
+
+
 
 ;==========================================================
 
@@ -102,9 +104,10 @@ scroll-down = i3wm-wsprev
 
 # modules-left = menu workspaces google github reddit facebook youtube
 # modules-left = menu workspaces dolphin github vscode flameshot color-picker
-modules-left = menu workspaces dolphin flameshot color-picker
+# modules-left = menu workspaces dolphin flameshot color-picker
+modules-left = menu workspaces dolphin flameshot  color-picker
 modules-center = spotify-prev spotify-bar spotify-next memory cpu package-updates-trigger package-updates
-#modules-right = network system-bluetooth-bluetoothctl volume battery date powermenu
+# modules-center = spotify-prev spotify-bar spotify-next cpu package-updates-trigger package-updates
 modules-right = network system-bluetooth-bluetoothctl volume battery openweathermap-fullfeatured date powermenu
  
 ;== Modules ========================================================
