--- a/configs/config.ini
+++ b/configs/config.ini
@@ -12,7 +12,7 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 
-include-file = $HOME/.config/polybar/include-modules.ini
+include-file = $HOME/i3/include-modules.ini
 
 [color]
 
