--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -432,3 +432,7 @@ wintypes:
   popup_menu = { opacity = 0.85; }
   dropdown_menu = { opacity = 0.85; }
 };
+
+# ------------
+# ibhagwan
+corner-radius = 12;
