Update picom config to not give rounded corners to notifications and a few other apps

--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -436,3 +436,11 @@ wintypes:
 # ------------
 # ibhagwan
 corner-radius = 12;
+rounded-corner-exclude = [
+  #"window_type = 'normal'"
+  "class_g = 'Plasma'"
+  "class_g = 'plsama-desktop'"
+  "class_g = 'win7'"
+  "class_g = 'krunner'"
+  "class_g = 'plasmashell' window_type = 'notification'"
+]
