Clean up i3 config file a bit and update battery colors to use 9 levels

--- a/modules/battery.ini
+++ b/modules/battery.ini
@@ -31,11 +31,16 @@ ramp-capacity-9 = 
 
 ramp-capacity-0-foreground = ${color.red}
 ramp-capacity-1-foreground = ${color.red}
-ramp-capacity-2-foreground = ${color.yellow}
+ramp-capacity-2-foreground = ${color.red}
 ramp-capacity-3-foreground = ${color.yellow}
 ramp-capacity-4-foreground = ${color.yellow}
+ramp-capacity-5-foreground = ${color.yellow}
+ramp-capacity-6-foreground = #99B679
+ramp-capacity-7-foreground = #99B679
+ramp-capacity-8-foreground = #99B679
+ramp-capacity-9-foreground = #99B679
 #ramp-capacity-foreground   = ${color.fg}
-ramp-capacity-foreground   = #99B679 
+# ramp-capacity-foreground   = #99B679 
 bar-capacity-width = 2
 
 animation-charging-0 = 
