--- a/configs/config
+++ b/configs/config
@@ -62,7 +62,6 @@ bindsym Mod1+Shift+q kill
 # bindsysm $mod+d exec $menu
 set $menu --no-startup-id qdbus org.kde.krunner /App display
 bindsym Mod1+d exec $menu
-# bindsym Mod1+m exec dmenu_run -p Freudmenu:
 bindsym Mod1+m exec --no-startup-id ~/scripts/dmenu.sh 
 
 # change focus
@@ -170,7 +169,7 @@ bindsym Mod1+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
+## resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
@@ -203,19 +202,7 @@ bindsym Mod1+r mode "resize"
 #        status_command i3status
 #}
 
-for_window [title="Desktop — Plasma"] kill; floating enable; border none
-for_window [class="plasmashell"] floating enable;
-for_window [class="Plasma"] floating enable; border none
-for_window [title="plasma-desktop"] floating enable; border none
-for_window [title="win7"] floating enable; border none
-for_window [class="krunner"] floating enable; border none
-for_window [class="Kmix"] floating enable; border none
-for_window [class="Klipper"] floating enable; border none
-for_window [class="Plasmoidviewer"] floating enable; border none
-for_window [class="(?i)*nextcloud*"] floating disable
-for_window [class="plasmashell" window_type="notification"] floating enable, border none, move right 700px, move down 450px
-no_focus [class="plasmashell" window_type="notification"]
-
+## i3-gaps
 
 set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
@@ -339,7 +326,6 @@ mode "$mode_gaps_left" {
         bindsym Escape mode "default"
 }
 
-
 # bind Alt+o for full rofi menu, Alt+p for small menu launcher
 bindsym Mod1+o exec --no-startup-id $HOME/scripts/menu_full
 bindsym Mod1+p exec --no-startup-id $HOME/scripts/menu
@@ -347,19 +333,10 @@ bindsym Mod1+p exec --no-startup-id $HOME/scripts/menu
 # launch rofi tabswitcher
 bindsym Mod1+ISO_Left_Tab exec --no-startup-id $HOME/scripts/tabswitcher.sh
 
-# exec /usr/bin/compton --config /home/ksyasuda/.compton.conf~.i3/config
-
-# smart_borders on
-
-# start picom in the background on startup
-# exec_always ~/scripts/picom.sh
-
-# Move spotify to workspace 9
+# Assign and move spotify to workspace 9
 for_window [class="Spotify"] move --no-auto-back-and-forth to workspace $ws9
 
 # assign [class="^Chromium$"] 2
-# firefox start on 2 by default
-#assign [class="^firefox$"] "2: Firefox "
 assign [class="^firefox$"] "2: "
 
 #assign [class="^Code$"] "3: vscode ﬏"
@@ -368,81 +345,76 @@ assign [class="^Code$"] "3: ﬏"
 assign [class="^plasmawindowed$"] "4: "
 
 # launch apps on startup
-exec --no-startup-id alacritty
+# exec --no-startup-id alacritty
 # exec --no-startup-id firefox
 # exec --no-startup-id spotify
 # exec --no-startup-id chromium
 
-exec_always --no-startup-id $HOME/i3/scripts/launch.sh
-
 ##### i3-gaps ##############
-#for_window [class=".*"] border pixel 2
-#gaps inner 10
+## set default inner gap to 20
+gaps inner 20
 #gaps outer 1
-##gaps horizontal 2
-#
-################## i3-radius #######################
-#border_radius 4
-#
-##ᰜᰜᰜᰜᰜᰜ Border Control ᰜᰜᰜᰜᰜᰜ#
+#gaps horizontal 2
 
+################## i3-radius #######################
+# DON'T USE THIS OPTION... use picom rounded corners instead
+#border_radius 4
+##ᰜᰜᰜᰜᰜᰜ Border Control ᰜᰜᰜᰜᰜᰜ#
 #smart_borders on
 #smart_borders no_gaps
-# border_radius 11
-
-## -----------------------------------------------------------
-## BORDERS
-
 # default_border normal | none | pixel
 bindsym Mod1+y border pixel 3
 bindsym Mod1+t border normal 3
 bindsym Mod1+u border none
 for_window [class=".*"] focus parent, title_format <span foreground="#a8d385">%title</span>, focus child
-# Make all windows have title and border
+
+## Make all windows have title and border
 # for_window [class=".*"] border normal 3
-# All windows have just border
+## All windows have just border
 for_window [class=".*"] border pixel 3
 title_align center
 for_window[workspace="4: "] border pixel 3 
-for_window[class="^Spotify$"] border pixel 3
+for_window[class="^Spotify$"] border pixel 3, gaps inner 60
 
+## client colors
 # class			border backgr  text    indicate  child_border
 # client.focused #56a7b5 #282c34 #ffffff #2e9ef4 #56a7b5 
 client.focused #2878af #282c34 #ffffff #2e9ef4 #2878af 
 # client.focused #a8d385 #282c34 #ffffff #50b62c #a8d385
 client.unfocused #3d4450 #282c34 #ffffff #1e90ff #3d4450
 
-# You can also use any non-zero value if you'd like to have a border
-# for_window [class=".*"] border pixel 4
-
-
 ## default_floating_border normal | none| pixel
 #default_floating_border pixel 6
-#
+
 ## hide_edge_borders none|vertical|horizontal|both|smart
 #hide_edge_borders none
-#bindsym Mod1+shift+b exec --no-startup-id i3-msg border toggle
-#
-## changing border style
-#bindsym Mod1+t border normal
-#bindsym Mod1+y border 1pixel
-#bindsym Mod1+u border none
-#
-## -----------------------------------------------------------
-#
-## new_window normal | new_window none
-#new_window pixel 6
-#
-## new_float normal | none
 
-# exec_always --no-startup-id exec i3-workspace-names-daemon
-
+## make wheel of fortune and Android applications spawn as floating
 for_window [class="eecs285-proj3-ksyasuda-WheelOfFortune"] floating enable
+for_window [title="Android Emulator - Pixel_4_API_30:5554"] floating enable
 
+## Resizing windows
 bindsym Mod1+Ctrl+Right resize shrink width 1 px or 1 ppt
 bindsym Mod1+Ctrl+Up resize grow height 1 px or 1 ppt
 bindsym Mod1+Ctrl+Down resize shrink height 1 px or 1 ppt
 bindsym Mod1+Ctrl+Left resize grow width 1 px or 1 ppt
+
+## disable floating, borders
+for_window [title="Desktop — Plasma"] kill; floating enable; border none
+for_window [class="plasmashell"] floating enable;
+for_window [class="Plasma"] floating enable; border none
+for_window [title="plasma-desktop"] floating enable; border none
+for_window [title="win7"] floating enable; border none
+for_window [class="krunner"] floating enable; border none
+for_window [class="Kmix"] floating enable; border none
+for_window [class="Klipper"] floating enable; border none
+for_window [class="Plasmoidviewer"] floating enable; border none
+for_window [class="(?i)*nextcloud*"] floating disable
+for_window [class="plasmashell" window_type="notification"] floating enable, border none, move right 700px, move down 450px
+no_focus [class="plasmashell" window_type="notification"]
+
+## launch polybar on startup
+exec_always --no-startup-id $HOME/i3/scripts/launch.sh
 
 ######################################################################
 # automatically start i3-config-wizard to offer the user to create a
