--- a/modules/menu.ini
+++ b/modules/menu.ini
@@ -6,6 +6,5 @@ content = 
 content-padding = 2
 content-background = ${color.shade1}
 content-foreground = #2878af 
-click-middle = ~/.config/polybar/scripts/menu
-click-left = ~/.config/polybar/scripts/menu_full
-click-right = ~/.config/polybar/scripts/color-switch.sh
+click-right = ~/i3/scripts/menu_full
+click-left = ~/i3/scripts/menu
