--- a/modules/powermenu.ini
+++ b/modules/powermenu.ini
@@ -4,5 +4,5 @@ content = 
 content-padding = 4
 content-background = ${color.shade1}
 content-foreground = #D85458 
-click-left = ~/.config/polybar/scripts/sysmenu
-click-right = ~/.config/polybar/scripts/sysmenu
+click-left = ~/i3/scripts/sysmenu
+click-right = ~/i3/scripts/sysmenu
