--- a/modules/volume.ini
+++ b/modules/volume.ini
@@ -5,6 +5,7 @@ type = internal/pulseaudio
 use-ui-max = true
 interval = 5
 click-right = pavucontrol &
+click-right = exec /i3/scripts/pavucontrol.sh
 format-volume = <ramp-volume> <label-volume>
 format-volume-padding = 1
 format-volume-foreground = #55AEBB 
