--- a/modules/bluetooth.ini
+++ b/modules/bluetooth.ini
@@ -1,8 +1,8 @@
 [module/system-bluetooth-bluetoothctl]
 type = custom/script
-exec = ~/.config/polybar/scripts/system-bluetooth-bluetoothctl.sh
+exec = ~/i3/scripts/system-bluetooth-bluetoothctl.sh
 tail = true
-click-left = ~/.config/polybar/scripts/system-bluetooth-bluetoothctl.sh --toggle &
+click-left = ~/i3/scripts/system-bluetooth-bluetoothctl.sh --toggle &
 click-right = blueman-manager
 label-foreground = #fc855a
 label-padding = 1
