--- a/modules/package-updates.ini
+++ b/modules/package-updates.ini
@@ -1,6 +1,6 @@
 [module/package-updates]
 type = custom/ipc
-hook-0 = ~/.config/polybar/scripts/package-updates
+hook-0 = ~/i3/scripts/package-updates
 format-foreground = #55aebb
 format-padding = 1
 interval = 500
