Update modules to work with xps 13

--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -435,7 +435,8 @@ wintypes:
 
 # ------------
 # ibhagwan
-corner-radius = 12;
+# corner-radius = 12;
+corner-radius = 15;
 rounded-corner-exclude = [
   #"window_type = 'normal'"
   "class_g = 'Plasma'"
