--- a/modules/cpu.ini
+++ b/modules/cpu.ini
@@ -1,8 +1,8 @@
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-format = <label> <ramp-coreload>
-# format = <label>
+# format = <label> <ramp-coreload>
+format = <label>
 format-padding = 0.5
 format-width = 20
 label = CPU %percentage:2%%
