--- a/modules/network.ini
+++ b/modules/network.ini
@@ -1,17 +1,18 @@
 [module/network]
 type = internal/network
-interface = wlp1s0
+interface = wlp2s0
 interval = 3.0
-udspeed-minwidth = 4
+udspeed-minwidth = 1
 accumulate-stats = true
 #format-connected = <ramp-signal><label-connected>
-format-connected = <label-connected><ramp-signal>
+# format-connected = <label-connected><ramp-signal>
+format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 #format-packetloss = <animation-packetloss> <label-connected>
-label-connected = %downspeed%
-#label-connected = Wi-Fi: 
+# label-connected =   %essid%%downspeed:9%
+label-connected =   %essid%
 #label-connected =%downspeed:9%
-label-disconnected = 睊not connected
+label-disconnected = 睊 not connected
 #label-disconnected-foreground = #66ffffff
 label-connected-padding = 1
 label-connected-foreground = #A8D385
