--- a/modules/workspaces.ini
+++ b/modules/workspaces.ini
@@ -25,8 +25,8 @@ label-active-underline = #99b679
 label-urgent-padding = 1
 label-occupied-padding = 1
 
-label-empty-foreground = ${color.fg}
+label-empty-foreground = #55aebb 
 label-active-foreground = #99b679 
 label-urgent-foreground = ${color.curgent}
 # label-occupied-foreground = ${color.coccupied}
-label-occupied-foreground = #56a7b5 
+label-occupied-foreground = #55aebb 
