Change colors of spotify underline to match system colors

--- a/modules/spotify-controls.ini
+++ b/modules/spotify-controls.ini
@@ -5,7 +5,7 @@ format = <label>
 click-left = playerctl previous spotify
 format-padding = 1
 format-foreground = #55AEBB
-format-underline = #1db954
+format-underline = #a8d385
 
 [module/spotify-play-pause]
 type = custom/ipc
@@ -25,4 +25,4 @@ format = <label>
 #format-padding=1
 click-left = playerctl next spotify
 format-foreground = #55AEBB
-format-underline = #1db954
+format-underline = #a8d385
