--- a/modules/spotify-bar.ini
+++ b/modules/spotify-bar.ini
@@ -3,7 +3,7 @@ type = custom/script
 interval = 1
 format = <label>
 exec = python /home/sudacode/i3/scripts/spotify_status.py -t 50 -p ',' --playpause-font=0 -f '{play_pause}  {artist}: {song}'
-format-underline = #1db954
+format-underline = #a8d385 
 format-foreground = #55AEBB
 format-padding = 1
 click-left = playerctl play-pause spotify
