--- a/configs/config.ini
+++ b/configs/config.ini
@@ -107,8 +107,7 @@ scroll-down = i3wm-wsprev
 # modules-left = menu workspaces dolphin flameshot color-picker
 modules-left = menu workspaces dolphin flameshot  color-picker
 modules-center = spotify-prev spotify-bar spotify-next memory cpu package-updates-trigger package-updates
-# modules-center = spotify-prev spotify-bar spotify-next cpu package-updates-trigger package-updates
-modules-right = network system-bluetooth-bluetoothctl volume battery openweathermap-fullfeatured date powermenu
+modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
  
 ;== Modules ========================================================
 
