--- a/modules/volume.ini
+++ b/modules/volume.ini
@@ -4,7 +4,7 @@ type = internal/pulseaudio
 #sink = alsa_output.pci-0000_00_1f.3.analog-stereo
 use-ui-max = true
 interval = 5
-click-right = pavucontrol & 
+click-right = exec pavucontrol
 format-volume = <ramp-volume> <label-volume>
 format-volume-padding = 1
 format-volume-foreground = #55AEBB 
