Add japanese date, remove cpu and memory, and change colors to be the same across same colored modules

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -89,6 +89,7 @@ foreground = ${color.fg}
 font-0 = "FiraCode Nerd Font:pixelsize=20:antialias=true;3"
 font-1 = "Iosevka Nerd Font:pixelsize=20;3"
 font-2 = Weather Icons:size=20;1
+font-3 = "Source Han Sans JP:pixelsize=20;antialias=true;3"
 
 dip = 250
 
@@ -106,7 +107,9 @@ scroll-down = i3wm-wsprev
 # modules-left = menu workspaces dolphin github vscode flameshot color-picker
 # modules-left = menu workspaces dolphin flameshot color-picker
 modules-left = menu workspaces dolphin flameshot  color-picker
-modules-center = spotify-prev spotify-bar spotify-next memory cpu package-updates-trigger package-updates
+# modules-center = spotify-prev spotify-bar spotify-next memory cpu package-updates-trigger package-updates
+modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
+# modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
 modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
  
 ;== Modules ========================================================
