--- a/modules/battery.ini
+++ b/modules/battery.ini
@@ -5,19 +5,19 @@ time-format = %H:%M
 battery = BAT0
 adapter = AC0
 format-charging = <animation-charging> <label-charging>
-format-charging-foreground = #99B679
+format-charging-foreground = #a8d385
 format-charging-padding = 2 
-label-charging = %{F#99B679}%percentage%%%{F-}
-label-charging-foreground =  #99B679
+label-charging = %{F#a8d385}%percentage%%%{F-}
+label-charging-foreground =  #a8d385
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-foreground = #F9825A 
 format-discharging-padding = 2 
 label-discharging =%{F#F9825A}%percentage%%%{F-}
 format-full = <label-full>
-format-full-foreground = #99B679
+format-full-foreground = #a8d385
 
 format-full-prefix = ""
-format-full-prefix-foreground = #99B679 
+format-full-prefix-foreground = #a8d385 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
@@ -35,12 +35,12 @@ ramp-capacity-2-foreground = ${color.red}
 ramp-capacity-3-foreground = ${color.yellow}
 ramp-capacity-4-foreground = ${color.yellow}
 ramp-capacity-5-foreground = ${color.yellow}
-ramp-capacity-6-foreground = #99B679
-ramp-capacity-7-foreground = #99B679
-ramp-capacity-8-foreground = #99B679
-ramp-capacity-9-foreground = #99B679
+ramp-capacity-6-foreground = #a8d385
+ramp-capacity-7-foreground = #a8d385
+ramp-capacity-8-foreground = #a8d385
+ramp-capacity-9-foreground = #a8d385
 #ramp-capacity-foreground   = ${color.fg}
-# ramp-capacity-foreground   = #99B679 
+# ramp-capacity-foreground   = #a8d385 
 bar-capacity-width = 2
 
 animation-charging-0 = 
