--- a/modules/bluetooth2.ini
+++ b/modules/bluetooth2.ini
@@ -4,5 +4,5 @@ exec = rofi-bluetooth --status
 interval = 1
 click-left = rofi-bluetooth &
 click-right = blueman-manager
-label-foreground = #fc855a
+label-foreground = #fc8353
 label-padding = 1
