--- a/modules/flameshot.ini
+++ b/modules/flameshot.ini
@@ -2,6 +2,6 @@
 type = custom/text
 content = 
 content-padding = 2
-content-foreground = #FC8032
+content-foreground = #fc8353
 click-left = flameshot gui
 click-right = flameshot config
