--- a/modules/openweathermap-fullfeatured.ini
+++ b/modules/openweathermap-fullfeatured.ini
@@ -5,6 +5,6 @@ click-left = exec weather
 interval = 600
 label-font = 3
 label-background = #282c34 
-label-foreground = #fc855a 
+label-foreground = #fc8353 
 label-padding = 2
 label-offset-y = 3
