--- a/modules/spotify-bar.ini
+++ b/modules/spotify-bar.ini
@@ -4,6 +4,7 @@ interval = 1
 format = <label>
 exec = python /home/sudacode/i3/scripts/spotify_status.py -t 50 -p ',' --playpause-font=0 -f '{play_pause}  {artist}: {song}'
 format-underline = #a8d385 
-format-foreground = #55AEBB
+format-foreground = #a8d385 
+# format-foreground = #55AEBB
 format-padding = 1
 click-left = playerctl play-pause spotify
