--- a/modules/spotify-controls.ini
+++ b/modules/spotify-controls.ini
@@ -4,8 +4,9 @@ exec = echo "玲"
 format = <label>
 click-left = playerctl previous spotify
 format-padding = 1
-format-foreground = #55AEBB
+# format-foreground = #55AEBB
 format-underline = #a8d385
+format-foreground = #a8d385
 
 [module/spotify-play-pause]
 type = custom/ipc
@@ -24,5 +25,6 @@ exec = echo "怜"
 format = <label>
 #format-padding=1
 click-left = playerctl next spotify
-format-foreground = #55AEBB
+# format-foreground = #55AEBB
 format-underline = #a8d385
+format-foreground = #a8d385
