--- a/modules/volume.ini
+++ b/modules/volume.ini
@@ -7,7 +7,7 @@ interval = 5
 click-right = exec pavucontrol
 format-volume = <ramp-volume> <label-volume>
 format-volume-padding = 1
-format-volume-foreground = #55AEBB 
+format-volume-foreground = #56a7b5 
 label-volume = %percentage%%
 label-muted = "婢"
 label-muted-padding = 1
