--- a/modules/dolphin.ini
+++ b/modules/dolphin.ini
@@ -2,5 +2,6 @@
 type = custom/text
 content =  
 content-padding = 2
-content-foreground = #3BB6F3
+# content-foreground = #3BB6F3
+content-foreground = #56a7b5 
 click-left = dolphin
