--- a/modules/package-updates.ini
+++ b/modules/package-updates.ini
@@ -1,6 +1,6 @@
 [module/package-updates]
 type = custom/ipc
 hook-0 = ~/i3/scripts/package-updates
-format-foreground = #55aebb
+format-foreground = #56a7b5
 format-padding = 1
 interval = 500
