Fix off by one error on jdate module

--- a/modules/openweathermap-fullfeatured.ini
+++ b/modules/openweathermap-fullfeatured.ini
@@ -1,10 +1,9 @@
 [module/openweathermap-fullfeatured]
 type = custom/script
 exec = ~/i3/scripts/openweathermap-fullfeatured.sh
-click-left = exec weather
+click-left = exec ~/scripts/weather
 interval = 600
 label-font = 3
 label-background = #282c34 
 label-foreground = #fc8353 
 label-padding = 2
-label-offset-y = 3
