--- a/configs/config
+++ b/configs/config
@@ -352,6 +352,7 @@ for_window [class="Plasmoidviewer"] floating enable; border none
 for_window [class="(?i)*nextcloud*"] floating disable
 for_window [class="plasmashell" window_type="notification"] floating enable, border none, move right 1600px, move down 450px
 # no_focus [class="plasmashell" window_type="notification"]
+for_window [class="Steam"] floating enable
 
 
 ## CUSTOM KEYBINDS
