--- a/configs/config.ini
+++ b/configs/config.ini
@@ -36,7 +36,7 @@ coccupied = #42A5F5
 #shade5 = #AA2E50
 shade1 = #17191e 
 shade2 = #1e2127
-shade3 = #181a1f
+shade3 = #191c21 
 shade4 = #282c34 
 shade5 = #AA2E50
 shade6 = #7E57C2
@@ -106,11 +106,12 @@ scroll-down = i3wm-wsprev
 # modules-left = menu workspaces google github reddit facebook youtube
 # modules-left = menu workspaces dolphin github vscode flameshot color-picker
 # modules-left = menu workspaces dolphin flameshot color-picker
-modules-left = menu workspaces dolphin flameshot  color-picker
+modules-left = menu workspaces network bluetooth2 dolphin flameshot color-picker
 # modules-center = spotify-prev spotify-bar spotify-next memory cpu package-updates-trigger package-updates
-modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
+# modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
+modules-center = spotify-prev spotify-bar spotify-next package-updates-trigger package-updates 
 # modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
-modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
+modules-right = volume battery openweathermap-fullfeatured jdate date powermenu
  
 ;== Modules ========================================================
 
