Rearrange polybar again and change color of wifi and bluetooth modules

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -111,7 +111,7 @@ modules-left = menu workspaces network bluetooth2 dolphin flameshot color-picker
 # modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
 modules-center = spotify-prev spotify-bar spotify-next package-updates-trigger package-updates 
 # modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
-modules-right = volume battery openweathermap-fullfeatured jdate date powermenu
+modules-right = jdate volume battery openweathermap-fullfeatured date powermenu
  
 ;== Modules ========================================================
 
