--- a/modules/bluetooth2.ini
+++ b/modules/bluetooth2.ini
@@ -1,8 +1,9 @@
 [module/bluetooth2]
 type = custom/script
 exec = rofi-bluetooth --status
-interval = 1
+interval = 2
 click-left = rofi-bluetooth &
 click-right = blueman-manager
-label-foreground = #fc8353
-label-padding = 1
+# format-foreground = #fc8353
+format-foreground = #A8D385
+format-padding = 2
