--- a/modules/spotify-controls.ini
+++ b/modules/spotify-controls.ini
@@ -1,6 +1,7 @@
 [module/spotify-prev]
 type = custom/script
-exec = echo "玲"
+# exec = echo "玲"
+exec = ~/i3/scripts/spot-controls.sh prev
 format = <label>
 click-left = playerctl previous spotify
 format-padding = 1
@@ -21,7 +22,8 @@ click-left = playerctl play-pause spotify
 
 [module/spotify-next]
 type = custom/script
-exec = echo "怜"
+# exec = echo "怜"
+exec = ~/i3/scripts/spot-controls.sh next
 format = <label>
 #format-padding=1
 click-left = playerctl next spotify
