Moved package updates to right side and adjusted padding

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -109,9 +109,9 @@ scroll-down = i3wm-wsprev
 modules-left = menu workspaces network bluetooth2 dolphin flameshot color-picker
 # modules-center = spotify-prev spotify-bar spotify-next memory cpu package-updates-trigger package-updates
 # modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
-modules-center = spotify-prev spotify-bar spotify-next package-updates-trigger package-updates 
+modules-center = spotify-prev spotify-bar spotify-next 
 # modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
-modules-right = jdate volume battery openweathermap-fullfeatured date powermenu
+modules-right = package-updates-trigger package-updates jdate volume battery openweathermap-fullfeatured date powermenu
  
 ;== Modules ========================================================
 
