--- a/modules/openweathermap-fullfeatured.ini
+++ b/modules/openweathermap-fullfeatured.ini
@@ -3,7 +3,7 @@ type = custom/script
 exec = ~/i3/scripts/openweathermap-fullfeatured.sh
 click-left = exec ~/scripts/weather
 interval = 600
-label-font = 3
-label-background = #282c34 
-label-foreground = #fc8353 
-label-padding = 2
+format-font = 3
+format-background = #282c34 
+format-foreground = #fc8353 
+format-padding = 2
