Clean up polybar config a little and update padding on network module

--- a/modules/network.ini
+++ b/modules/network.ini
@@ -14,10 +14,12 @@ label-connected =   %essid%
 #label-connected =%downspeed:9%
 label-disconnected = 睊 not connected
 #label-disconnected-foreground = #66ffffff
-label-connected-padding = 2
+# label-connected-padding = 2
+format-connected-padding = 1
 label-connected-foreground = #A8D385
 label-disconnected-foreground = #F85522
-label-disconnected-padding = 2
+# label-disconnected-padding = 2
+format-disconnected-padding = 1
 
 ; Only applies if <ramp-signal> is used
 ramp-signal-0 = 😱
@@ -40,4 +42,4 @@ ramp-signal-0-foreground = #F85522
 #animation-packetloss-1-foreground = #000000
 #; Framerate in milliseconds
 #animation-packetloss-framerate = 500
-click-left = kcmshell5
+# click-left = kcmshell5
