--- a/configs/config
+++ b/configs/config
@@ -344,16 +344,17 @@ for_window [title="Desktop — Plasma"] kill; floating enable; border none
 for_window [class="plasmashell"] floating enable;
 for_window [class="Plasma"] floating enable; border none
 for_window [title="plasma-desktop"] floating enable; border none
+for_window [title="Plasma-desktop"] floating enable; border none
 for_window [title="win7"] floating enable; border none
 for_window [class="krunner"] floating enable; border none
 for_window [class="Kmix"] floating enable; border none
 for_window [class="Klipper"] floating enable; border none
 for_window [class="Plasmoidviewer"] floating enable; border none
 for_window [class="(?i)*nextcloud*"] floating disable
-for_window [class="plasmashell" window_type="notification"] floating enable, border none, move right 1600px, move down 450px
+# for_window [class="plasmashell" window_type="notification"] floating enable, border none, move right 1600px, move down 450px
+for_window [class="plasmashell" window_type="notification"] floating enable, border none, move position center, move down 908px, resize set 600 200
 # no_focus [class="plasmashell" window_type="notification"]
 for_window [class="Steam"] floating enable
-
 
 ## CUSTOM KEYBINDS
 # start rofi tabswitcher
