Update polybar config

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -91,7 +91,7 @@ font-1 = "Iosevka Nerd Font:pixelsize=20;3"
 font-2 = Weather Icons:size=20;1
 font-3 = "Source Han Sans JP:pixelsize=20;antialias=true;3"
 
-dip = 250
+dpi = 100
 
 ;==========================================================
 
