Add desktop configuration files

--- a/include-modules.ini
+++ b/include-modules.ini
@@ -18,6 +18,7 @@ include-file = $HOME/i3/modules/menu.ini
 include-file = $HOME/i3/modules/pulseaudio.ini
 include-file = $HOME/i3/modules/workspaces.ini
 include-file = $HOME/i3/modules/network.ini
+include-file = $HOME/i3/modules/network-desktop.ini
 include-file = $HOME/i3/modules/reddit.ini
 include-file = $HOME/i3/modules/github.ini
 include-file = $HOME/i3/modules/volume.ini
