Update picom configuration to use kawase blur instead of dual_kawase and disable vsync

--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -220,7 +220,7 @@ blur-background-exclude = [
 backend = "glx";
 # Enable/disable VSync.
 # vsync = false
-vsync = true
+vsync = false
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -447,7 +447,8 @@ rounded-corner-exclude = [
 ]
 
 blur: {
-  method = "dual_kawase";
+  # method = "dual_kawase";
+  method = "kawase";
   strength = 8;
   background = false;
   background-frame = false;
