fix rofi-bluetooth.deskop and update alacritty.yml

--- a/configs/config.desktop.ini
+++ b/configs/config.desktop.ini
@@ -89,7 +89,7 @@ scroll-down = i3wm-wsprev
 
 ;== Module Location ========================================================
 
-modules-left = menu workspaces network-desktop bluetooth.desktop dolphin flameshot color-picker
+modules-left = menu workspaces network-desktop bluetooth-desktop dolphin flameshot color-picker
 # modules-center = spotify-prev spotify-bar spotify-next jdate package-updates-trigger package-updates 
 modules-center = spotify-prev spotify-bar spotify-next 
 # modules-right = network bluetooth2 volume battery openweathermap-fullfeatured date powermenu
