--- a/configs/alacritty.yml
+++ b/configs/alacritty.yml
@@ -114,7 +114,7 @@ font:
     style: Regular
 
   # Bold font face
-  #bold:
+  bold:
     # Font family
     #
     # If the bold family is not specified, it will fall back to the
@@ -130,10 +130,10 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "FiraCode Nerd Font"
+    # family: "FiraCode Nerd Font"
 
     # The `style` can be specified to pick a specific face.
-    style: Italic
+    # style: Italic
 
   # Bold italic font face
   #bold_italic:
@@ -141,10 +141,10 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "FiraCode Nerd Font"
+    # family: "FiraCode Nerd Font"
 
     # The `style` can be specified to pick a specific face.
-    style: Bold Italic
+    # style: Bold Italic
 
   # Point size
   size: 11.0
