Lower blur power and update resize mode keybindings

--- a/configs/config
+++ b/configs/config
@@ -165,10 +165,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym l resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym h resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -398,7 +398,7 @@ exec --no-startup-id /usr/lib/pam_kwallet_init
 # launch polybar on startup
 exec_always --no-startup-id /home/sudacode/i3/scripts/launch.sh
 # launch picom in the background
-exec_always --no-startup-id /home/sudacode/scripts/picom.sh &
+exec_always --no-startup-id /home/sudacode/scripts/picom.sh
 # run wallpaper script to set random wallpaper
 exec_always --no-startup-id /home/sudacode/scripts/wallpaper.sh
 # start the calendar and todolist plasmoids
